added audio and adjusted margins

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <div id="metronome">
       <h1 id="title">METRONOME</h1>
 
-      <div>
-        <span id="bpm-readout">120</span>
+      <div id="readout-plus-minus">
+        <div id="minus-button"><i class="fa fa-minus"></i></div>
+        <div id="bpm-readout">120</div>
+        <div id="plus-button"><i class="fa fa-plus"></i></div>
       </div>
 
-      <div>
+      <div id="play-stop-parent">
         <i id="play-stop" class="fa fa-play"></i>
       </div>
     </div>
