added bpm table and body gradient

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
       <div id="play-stop-parent">
         <i id="play-stop" class="fa fa-play"></i>
       </div>
+
+      <div id="bpm-table">
+        <div id="bpm-cell-50" class="bpm-table-cell">50</div>
+        <div id="bpm-cell-60" class="bpm-table-cell">60</div>
+        <div id="bpm-cell-70" class="bpm-table-cell">70</div>
+        <div id="bpm-cell-80" class="bpm-table-cell">80</div>
+        <div id="bpm-cell-90" class="bpm-table-cell">90</div>
+        <div id="bpm-cell-100" class="bpm-table-cell">100</div>
+        <div id="bpm-cell-110" class="bpm-table-cell">110</div>
+        <div id="bpm-cell-120" class="bpm-table-cell">120</div>
+        <div id="bpm-cell-130" class="bpm-table-cell">130</div>
+        <div id="bpm-cell-140" class="bpm-table-cell">140</div>
+        <div id="bpm-cell-150" class="bpm-table-cell">150</div>
+        <div id="bpm-cell-160" class="bpm-table-cell">160</div>
+      </div>
     </div>
 
   </div>
