added volume control and keybinds

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <div id="bpm-cell-150" class="bpm-table-cell">150</div>
         <div id="bpm-cell-160" class="bpm-table-cell">160</div>
       </div>
+
+      <div id="volume-control-parent">
+        <input type="range" value="5" min="1" max="5" id="volume-control">
+      </div>
+      <div id="volume-readout">VOLUME: 100%</div>
     </div>
 
   </div>
