added extra bpm table row and min/max bpm values

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div id="bpm-cell-140" class="bpm-table-cell">140</div>
         <div id="bpm-cell-150" class="bpm-table-cell">150</div>
         <div id="bpm-cell-160" class="bpm-table-cell">160</div>
+        <div id="bpm-cell-170" class="bpm-table-cell">170</div>
+        <div id="bpm-cell-180" class="bpm-table-cell">180</div>
+        <div id="bpm-cell-190" class="bpm-table-cell">190</div>
       </div>
 
       <div id="volume-control-parent">
