added hover css and made title click refresh page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
 
     <div id="metronome">
-      <h1 id="title">METRONOME</h1>
+      <a id="title-a" href="."><h1 id="title">METRONOME</h1></a>
 
       <div id="readout-plus-minus">
         <div id="minus-button"><i class="fa fa-minus"></i></div>
