fixed bugs present when opening directly from html file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <div class="wrapper">
 
     <div id="metronome">
-      <a id="title-a" href="."><h1 id="title">METRONOME</h1></a>
+
+      <h1 id="title" onclick="javascript:window.location.reload();">METRONOME</h1>
 
       <div id="readout-plus-minus">
         <div id="minus-button"><i class="fa fa-minus"></i></div>
