added input bpm readout and enter keybind

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div id="readout-plus-minus">
         <div id="minus-button"><i class="fa fa-minus"></i></div>
-        <div id="bpm-readout">120</div>
+        <div id="bpm-readout"><input id="bpm-readout-input" type="text" maxLength="3" step="3" value="120"></input></div>
         <div id="plus-button"><i class="fa fa-plus"></i></div>
       </div>
 
