added animations on page load

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <div class="wrapper">
+  <div id="wrapper">
 
     <h1 id="title" onclick="javascript:window.location.reload();">METRONOME</h1>
 
